[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["orionvis*"] } }

[project.package_data]
mypackage = [
  "configs/snaps/mobilemamba/*.txt",
]

[project]
name = "orionvis"
version = "1.0.0"
authors = [
  { name="bluemoon-o2", email="2095774200@shu.edu.cn" },
]
description = "A Python package for computer vision tasks in deep learning (e.g., feature extraction, model loading)"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["computer vision", "deep learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.9.0",
  "transformers>=4.57.1",
  "xformers>=0.0.20",
  "gdown>=5.0.0",
  "pydantic>=2.12.4",
  "lazy_object_proxy>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/bluemoon-o2/models"
"Issue Tracker" = "https://github.com/bluemoon-o2/models/issues"